--- a/Style.css
+++ b/Style.css
@@ -259,6 +259,10 @@ html, body {
     background: linear-gradient(135deg, #0f0f0f, #2a2a2a);
 }
 
+.portfolio-div a {
+    text-decoration: none;
+}
+
 .portfolio-div h1 {
     color: #ffc107;
     text-align: center;
